staff update from: ece2400-pa1-math-v2-0.0-594-g5998d10 [ci skip]

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ pa1-math/src/pow-iter
 pa1-math/src/pow-recur
 pa1-math/src/sqrt-iter
 pa1-math/src/sqrt-recur
+pa1-math/src/pow-iter-adhoc
+pa1-math/src/pow-recur-adhoc
+pa1-math/src/sqrt-iter-adhoc
+pa1-math/src/sqrt-recur-adhoc
