staff update from: ece2400-pa1-math-0.0-619-g8bdc9ca [ci skip]

--- a/pa1-math/CMakeLists.txt
+++ b/pa1-math/CMakeLists.txt
@@ -149,3 +149,12 @@ foreach(EVAL_FILE ${EVAL_FILES})
   add_dependencies(eval ${EVAL_BIN})
 
 endforeach(EVAL_FILE)
+
+#-------------------------------------------------------------------------
+# Code coverage target
+#-------------------------------------------------------------------------
+
+add_custom_target(coverage
+  COMMAND lcov --capture --directory . --output-file coverage.info
+  COMMAND genhtml coverage.info --output-directory coverage-html
+)
