staff update from: ece2400-pa1-math-0.0-624-gbc1dbfa [ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,14 +51,14 @@ before_script:
 # make check so that we generate the reports for code coverage analysis.
 
 script:
-  - make check-milestone
+  - make check
   - make coverage
   - make eval
   - ./pow-iter-eval 4.2 42
-  # - ./pow-recur-eval 4.2 42
+  - ./pow-recur-eval 4.2 42
   - ./pow-std-eval 4.2 42
   - ./sqrt-iter-eval 42
-  # - ./sqrt-recur-eval 42
+  - ./sqrt-recur-eval 42
   - ./sqrt-std-eval 42
 
 #-------------------------------------------------------------------------
